--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "jquery": "^3.5.1",
     "live-server": "^1.2.1",
     "moment": "^2.29.0",
     "sass": "^1.26.11",
